--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.thymeleaf.cache=false
 #MySql conexion
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario_prueba
-spring.datasource.password=Usuar1o_Clave.
+spring.datasource.password=Usuario_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
